Fix z-index of login modal.

--- a/src/components/common/Modal.styl
+++ b/src/components/common/Modal.styl
@@ -25,6 +25,7 @@
         margin 0 auto
         padding-bottom 7.3%
         background-color $navbar-bg-color
+        z-index 7
 
     .close-modal-btn-container
         text-align right
