--- a/src/styles/general/index.styl
+++ b/src/styles/general/index.styl
@@ -4,6 +4,9 @@
 @import "./dimensions"
 @import "./values.styl"
 
+body
+    overflow hidden
+
 html, .root-app
     color $general-text-color
     background $bg-color-for-app
@@ -45,6 +48,7 @@ html, .root-app
     max-width 100%
     height 100vh
     max-height 100vh
+    overflow-y auto
 
     .page
         display block
